# traffic_system

./: .gitignore  files.txt  main.py  pyproject.toml  requirements.txt  test.py
config/: config.py  rules.json
homography/: homography_data.json
modules/: detector.py  label_builder.py  pipeline.py  rule_engine.py  speed.py  tracker.py  trajectory.py  violation.py  zone_logic.py
modules/analytics/: congestion.py  speed.py
modules/core/: detector.py  frame_data.py  pipeline.py  stage_manager.py
modules/core/stages/: analytics_stage.py  base_stage.py  counting_stage.py  detection_stage.py  engine_stage.py  event_stage.py  spatial_stage.py  tracking_stage.py  violation_stage.py  visualization_stage.py
modules/engines/: accident_engine.py  base_engine.py  engine_registry.py  model_accident_engine.py
modules/engines/accident/: accident_base.py  accident_engine.py
modules/events/: event_manager.py
modules/serializers/: frame_serializer.py
modules/shared/: schemas.py
modules/spatial/: homography.py  roi_loader.py
modules/visualization/: birdeye.py  map_projection.py
roi/: roi_data.json
tools/: roi_selector.py
utils/: logger.py  video_utils.py
